<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.emagtestapp.MainActivity">
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/baseline_favorite_black_24"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/moviesFragment"
        android:icon="@drawable/baseline_movie_black_24"
        android:title="@string/action_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_search_black_24"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
</menu>