<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/favoritesFragment">

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.emagtestapp.presentation.favorites.FavoritesFragment"
        android:label="@string/favorites_fragment_label"
        tools:layout="@layout/fragment_search">
    </fragment>

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.example.emagtestapp.presentation.movies.listing.MovieListFragment"
        android:label="@string/movies_fragment_label"
        tools:layout="@layout/fragment_movies">
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.emagtestapp.presentation.search.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">
    </fragment>
</navigation>